...
    }
}
// MARK: - Mocked Data

private extension ExamsScheduleWidgetConfiguration {
    static let group010101 = ExamsScheduleWidgetConfiguration(
        title: "010101",
        content: .exams(
            days: [
                ExamsScheduleWidgetConfiguration.ExamDay(
                    date: try! dateStyle.parse("04.01.2024"),
                    pairs: [
                        PairViewModel(
...
                ),
            ]
        )
    )

    static let group151004 = PinnedScheduleWidgetConfiguration(
        title: "151004",
        day: try? dateStyle.parse("01.09.2023"),
        content: .pairs(
            passed: [
                PairViewModel(
                    from: "09:00",
                    to: "10:20",
...
