...
                    .accessibilityIdentifier("settings-network-row")

                    NavigationLink(value: SettingsFeatureDestination.about) {
                        Label("screen.settings.about.navigation.title", systemImage: "info.circle.fill")
                            .settingsRowAccent(Color.indigo)
                    }
                    .accessibilityIdentifier("settings-about-row")
                }
            }
            .labelStyle(.settings)
            .listStyle(.insetGrouped)
            .navigationTitle("screen.settings.navigation.title")
            .navigationBarTitleDisplayMode(.inline)
...
